feat: add unit test