@@ -45,4 +45,6 @@ dependencies {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
